ディレクトリ処理を改善

--- a/zip_viewer/viewer/zip.html
+++ b/zip_viewer/viewer/zip.html
@@ -78,7 +78,7 @@
 
     eagle.onThemeChanged((theme) => {
       console.log(witheme)
-      document.body.setAttribute('theme', theme);
+      document.body.setAttribute('theme', theme)
     })
   </script>
   <script type="text/babel" data-type="module" src="initialize.js"></script>
