動画の再生に対応

--- a/zip_viewer/viewer/zip.html
+++ b/zip_viewer/viewer/zip.html
@@ -85,6 +85,7 @@
   <!-- components -->
   <script type="text/babel" data-type="module" src="AudioPlayer.jsx"></script>
   <script type="text/babel" data-type="module" src="PdfViewer.jsx"></script>
+  <script type="text/babel" data-type="module" src="VideoPlayer.jsx"></script>
   <!-- entry -->
   <script type="text/babel" data-type="module" src="App.jsx"></script>
 </html>
