--- a/zip_viewer/viewer/zip.html
+++ b/zip_viewer/viewer/zip.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <title>zip Viewer</title>
     <style>
+      :root {
+        --color: #fff;
+      }
+
       body[theme="LIGHT"],
       body[theme="LIGHTGRAY"] {
-        color: black;
+        --color: #000;
+        color: var(--color);
       }
 
       body[theme="GRAY"],
       body[theme="BLUE"],
       body[theme="PURPLE"],
       body[theme="DARK"] {
-        color: white;
+        color: var(--color);
       }
       * {
         box-sizing: border-box;
@@ -27,6 +32,58 @@
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
       }
+
+      .video_play {
+        display: inline-block;
+        position: relative;
+        width: 1em;
+        height: 1em;
+        border: 0.05em solid currentColor;
+        border-radius: 50%;
+        color: var(--color);
+        font-size: 40px;
+      }
+      .video_play::before {
+        position: absolute;
+        top: 50%;
+        left: 30%;
+        transform: translateY(-50%);
+        width: 0px;
+        height: 0px;
+        border: 0.3em solid transparent;
+        border-left: 0.5em solid currentColor;
+        box-sizing: border-box;
+        content: "";
+      }
+
+      .video_pause {
+        display: inline-block;
+        position: relative;
+        width: 1em;
+        height: 1em;
+        border: 0.05em solid currentColor;
+        border-radius: 50%;
+        color: var(--color);
+        font-size: 40px;
+      }
+      .video_pause::before,
+      .video_pause::after {
+        position: absolute;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        width: 0.1em;
+        height: 0.5em;
+        box-sizing: border-box;
+        background-color: currentColor;
+        content: "";
+      }
+      .video_pause::before {
+        left: 40%;
+      }
+      .video_pause::after {
+        left: 60%;
+      }
+
     </style>
 
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
