UIデザイン調整

--- a/zip_viewer/viewer/zip.html
+++ b/zip_viewer/viewer/zip.html
@@ -84,6 +84,35 @@
         left: 60%;
       }
 
+      .inputRange {
+        appearance: none;
+        width: 160px;
+        height: 12px;
+        border-radius: 9999px;
+        background: linear-gradient(90deg, #6dd5ff 100%, #dddddd 30%);
+        cursor: pointer;
+      }
+
+      /* ツマミ：Chrome, Safari, Edge用 */
+      .inputRange::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 24px;
+        height: 24px;
+        border-radius: 9999px;
+        background: #06b6d4;
+        box-shadow: none;
+      }
+
+      /* ツマミ：Firefox用 */
+      .inputRange::-moz-range-thumb {
+        border: none;
+        width: 24px;
+        height: 24px;
+        border-radius: 9999px;
+        background: #06b6d4;
+        box-shadow: none;
+      }
     </style>
 
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
