--- a/zip_viewer/viewer/index.html
+++ b/zip_viewer/viewer/index.html
@@ -118,37 +118,6 @@
   <body>
     <div id="root"></div>
   </body>
-  <script>
-    const setTheme = () => {
-      const theme = window.eagle.app.theme
-      if (theme) {
-        document.body.setAttribute('theme', theme)
-      } else {
-        setTimeout(() => {
-          const theme = window.eagle.app.theme
-          if (theme) {
-            document.body.setAttribute('theme', theme)
-          }
-        }, 200)
-      }
-    }
-
-    eagle.onPluginCreate((_) => {
-      setTheme()
-      return  window.createdEaglePlugin = true
-    })
-
-    eagle.onPluginRun((_) => {
-      setTheme()
-    })
-    eagle.onPluginShow(() => {
-      setTheme()
-    })
-
-    eagle.onThemeChanged((theme) => {
-      console.log(witheme)
-      document.body.setAttribute('theme', theme)
-    })
-  </script>
+  <script src="initialize.js"></script>
   <script src="App.jsx"></script>
 </html>
