固定のパラメーターを取得する方法を改善

--- a/zip_viewer/viewer/index.html
+++ b/zip_viewer/viewer/index.html
@@ -118,6 +118,6 @@
   <body>
     <div id="root"></div>
   </body>
-  <script src="initialize.js"></script>
+  <script src="initialize.ts"></script>
   <script src="App.jsx"></script>
 </html>
