--- a/zip_viewer/viewer/index.html
+++ b/zip_viewer/viewer/index.html
@@ -3,124 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>zip Viewer</title>
-  <style>
-  :root {
-    --color: #fff;
-  }
-
-  body[theme="LIGHT"],
-  body[theme="LIGHTGRAY"] {
-    --color: #000;
-    color: var(--color);
-  }
-
-  body[theme="GRAY"],
-  body[theme="BLUE"],
-  body[theme="PURPLE"],
-  body[theme="DARK"] {
-    color: var(--color);
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-
-  html, body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-
-  #images p {
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-  }
-
-  .video_play {
-    display: inline-block;
-    position: relative;
-    width: 1em;
-    height: 1em;
-    border: 0.05em solid currentColor;
-    border-radius: 50%;
-    color: var(--color);
-    font-size: 40px;
-  }
-
-  .video_play::before {
-    position: absolute;
-    top: 50%;
-    left: 30%;
-    transform: translateY(-50%);
-    width: 0px;
-    height: 0px;
-    border: 0.3em solid transparent;
-    border-left: 0.5em solid currentColor;
-    box-sizing: border-box;
-    content: "";
-  }
-
-  .video_pause {
-    display: inline-block;
-    position: relative;
-    width: 1em;
-    height: 1em;
-    border: 0.05em solid currentColor;
-    border-radius: 50%;
-    color: var(--color);
-    font-size: 40px;
-  }
-
-  .video_pause::before,
-  .video_pause::after {
-    position: absolute;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    width: 0.1em;
-    height: 0.5em;
-    box-sizing: border-box;
-    background-color: currentColor;
-    content: "";
-  }
-
-  .video_pause::before {
-    left: 40%;
-  }
-
-  .video_pause::after {
-    left: 60%;
-  }
-
-  .inputRange {
-    appearance: none;
-    width: 160px;
-    height: 12px;
-    border-radius: 9999px;
-    background: linear-gradient(90deg, #6dd5ff 100%, #dddddd 30%);
-    cursor: pointer;
-  }
-
-  /* ツマミ：Chrome, Safari, Edge用 */
-  .inputRange::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 24px;
-    height: 24px;
-    border-radius: 9999px;
-    background: #06b6d4;
-    box-shadow: none;
-  }
-
-  /* ツマミ：Firefox用 */
-  .inputRange::-moz-range-thumb {
-    border: none;
-    width: 24px;
-    height: 24px;
-    border-radius: 9999px;
-    background: #06b6d4;
-    box-shadow: none;
-  }
-  </style>
+  <link href="styles/index.css" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
