parcelをv2にマイグレーション

--- a/zip_viewer/viewer/index.html
+++ b/zip_viewer/viewer/index.html
@@ -8,5 +8,5 @@
 <body>
   <div id="root"></div>
 </body>
-<script src="initialize.ts"></script>
+<script type="module" src="initialize.ts"></script>
 </html>
