--- a/zip_viewer/viewer/index.html
+++ b/zip_viewer/viewer/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>zip Viewer</title>
-  <link href="styles/index.css" rel="stylesheet">
+  <link href="global.scss" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
