Eagleで開いているファイル自体を切り替えると最後に開いたファイルを保存出来ていなかったのを修正

--- a/zip_viewer/viewer/inspector.html
+++ b/zip_viewer/viewer/inspector.html
@@ -26,13 +26,17 @@
     padding: 0;
     overflow: hidden;
   }
+
+  #lastFileName {
+    font-size: 12px;
+  }
   </style>
 </head>
 <body>
   <div>
     前回開いていたファイル
-    <p id="lastFileName">ー</p>
   </div>
+  <p id="lastFileName">ー</p>
   <script src="./initialisers/inspector.ts" type="module"></script>
 </body>
 </html>
