zip内のファイル数をインスペクターに表示

--- a/zip_viewer/viewer/inspector.html
+++ b/zip_viewer/viewer/inspector.html
@@ -38,6 +38,6 @@
 <body>
   <div>最後に開いたファイル</div>
   <p id="lastFileName">ー</p>
-  <script src="./initialisers/inspector.ts" type="module"></script>
+  <script src="inspector.ts" type="module"></script>
 </body>
 </html>
