--- a/zip_viewer/viewer/inspector.html
+++ b/zip_viewer/viewer/inspector.html
@@ -28,7 +28,7 @@
     font-size: 16px;
   }
 
-  #lastFileName {
+  p {
     white-space: pre-wrap;
     font-size: 12px;
     color: #aaa;
@@ -38,6 +38,11 @@
 <body>
   <div>最後に開いたファイル</div>
   <p id="lastFileName">ー</p>
+  <div>ファイル数</div>
+  <p id="count">ー</p>
+  <div>設定済みのサムネイル数</div>
+  <p id="thumbnails">ー</p>
+  <button id="deleteThumbButton">設定されたサムネイルを消去</button>
   <script src="inspector.ts" type="module"></script>
 </body>
 </html>
