--- a/zip_viewer/viewer/inspector.html
+++ b/zip_viewer/viewer/inspector.html
@@ -40,7 +40,7 @@
   <p id="lastFileName">ー</p>
   <div>ファイル数</div>
   <p id="count">ー</p>
-  <div>設定済みのサムネイル数</div>
+  <div>生成したサムネイル数</div>
   <p id="thumbnails">ー</p>
   <button id="deleteThumbButton">設定されたサムネイルを消去</button>
   <script src="inspector.ts" type="module"></script>
