部分更新は出来ないので明示的にupsertする

--- a/zip_viewer/viewer/inspector.html
+++ b/zip_viewer/viewer/inspector.html
@@ -42,7 +42,7 @@
   <p id="count">ー</p>
   <div>生成したサムネイル数</div>
   <p id="thumbnails">ー</p>
-  <button id="deleteThumbButton">設定されたサムネイルを消去</button>
+  <button id="deleteThumbButton">生成されたサムネイルを削除</button>
   <script src="inspector.ts" type="module"></script>
 </body>
 </html>
