再生時間が保存されている時はインスペクタに表示

--- a/zip_viewer/viewer/inspector.html
+++ b/zip_viewer/viewer/inspector.html
@@ -42,6 +42,10 @@
   <p id="count">ー</p>
   <div>生成したサムネイル数</div>
   <p id="thumbnails">ー</p>
+  <div id="lastTimeContainer" style="display: none">
+    <div>最後の再生位置</div>
+    <p id="lastTime">-</p>
+  </div>
   <button id="deleteThumbButton">生成されたサムネイルを削除</button>
   <script src="inspector.ts" type="module"></script>
 </body>
